[package]
name = "future-bool"
description = "A bool one can await the changes."
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/devalain/future-bool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9", features = [ "macros", "rt-multi-thread", "sync", "time" ] }

[dev-dependencies]
